[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://GFX/Under.png" type="Texture" id=2]
[ext_resource path="res://GFX/Over_Sanity.png" type="Texture" id=3]
[ext_resource path="res://Game/HUD.gd" type="Script" id=4]
[ext_resource path="res://Game/Game.gd" type="Script" id=5]
[ext_resource path="res://GFX/Over.png" type="Texture" id=6]
[ext_resource path="res://Game/NPC.tscn" type="PackedScene" id=7]
[ext_resource path="res://SFX/game_over_sound.mp3" type="AudioStream" id=9]
[ext_resource path="res://GFX/Over_Sus.png" type="Texture" id=10]
[ext_resource path="res://GFX/Over_Cold.png" type="Texture" id=11]

[node name="Game" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 5 )

[node name="Level1" parent="." groups=["Level1"] instance=ExtResource( 1 )]

[node name="Player" parent="Level1" index="0"]
position = Vector2( 799, 533 )
collision_mask = 1

[node name="Grass" parent="Level1/Scenery" index="0"]
position = Vector2( 505, 586 )

[node name="Grass2" parent="Level1/Scenery/Grass" index="0"]
position = Vector2( 8.50002, 0 )
scale = Vector2( 3.44932, 1 )

[node name="CollisionShape2D" parent="Level1/Scenery/Grass" index="1"]
position = Vector2( 7.5, -0.5 )

[node name="Washing_Machine" parent="Level1/Scenery" index="2"]
position = Vector2( -239, -2 )

[node name="Position2D" type="Position2D" parent="Level1/Scenery/Washing_Machine" index="3"]
position = Vector2( 969, 535 )

[node name="NPC" parent="Level1/Scenery" index="5" instance=ExtResource( 7 )]
position = Vector2( 233, 532 )

[node name="NPC2" parent="Level1/Scenery" index="6" instance=ExtResource( 7 )]
position = Vector2( 194, 532 )

[node name="NPC3" parent="Level1/Scenery" index="7" instance=ExtResource( 7 )]
position = Vector2( 604, 532 )

[node name="NPC" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 232, 533 )

[node name="HUD" type="CanvasLayer" parent="." groups=["HUD"]]
script = ExtResource( 4 )

[node name="Madness" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Madness_Progress" type="TextureProgress" parent="HUD/Madness"]
margin_right = 300.0
margin_bottom = 50.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 3 )

[node name="Madness_Timer" type="Timer" parent="HUD/Madness"]
autostart = true

[node name="Madness_Label" type="Label" parent="HUD/Madness"]
margin_left = 305.0
margin_top = 20.0
margin_right = 300.0
text = "MADNESS"

[node name="Suspicion" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Suspicion_Progress" type="TextureProgress" parent="HUD/Suspicion"]
margin_top = 60.0
margin_right = 300.0
margin_bottom = 50.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 10 )

[node name="Suspicion_Timer" type="Timer" parent="HUD/Suspicion"]
autostart = true

[node name="Suspicion_Label" type="Label" parent="HUD/Suspicion"]
margin_left = 305.0
margin_top = 80.0
margin_right = 300.0
text = "SUSPICION"

[node name="Coldness" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Coldness_Progress" type="TextureProgress" parent="HUD/Coldness"]
margin_top = 120.0
margin_right = 300.0
margin_bottom = 50.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 11 )

[node name="Coldness_Timer" type="Timer" parent="HUD/Coldness"]
autostart = true

[node name="Coldness_Label" type="Label" parent="HUD/Coldness"]
margin_left = 305.0
margin_top = 140.0
margin_right = 300.0
text = "COLDNESS"

[node name="gameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="increase_difficulty" from="." to="HUD" method="_on_Game_increase_difficulty"]
[connection signal="radio_playing" from="Level/Scenery/Radio" to="HUD" method="_on_Radio_radio_playing"]
[connection signal="washing_machine_using" from="Level/Scenery/Washing_Machine" to="HUD" method="_on_Washing_Machine_washing_machine_using"]
[connection signal="heater_on" from="Level/Scenery/Heater" to="HUD" method="_on_Heater_heater_on"]
[connection signal="timeout" from="HUD/Madness/Madness_Timer" to="HUD" method="_on_Madness_Timer_timeout"]
[connection signal="timeout" from="HUD/Suspicion/Suspicion_Timer" to="HUD" method="_on_Suspicion_Timer_timeout"]
[connection signal="timeout" from="HUD/Coldness/Coldness_Timer" to="HUD" method="_on_Coldness_Timer_timeout"]

[editable path="Level"]
